Attempt to fix bug on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ main {
 }
 
 .list li {
+  word-break: break-word;
   position: relative;
   margin: 10px 0;
 }
@@ -130,7 +131,7 @@ main {
   margin-top: 1rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 480px) {
   .profile-container {
     flex-direction: column;
     align-items: stretch;
